remove maxPermSize run parameters, they are ignored in Java 8 but cause warnings